--- a/views/signup_faculty.html
+++ b/views/signup_faculty.html
@@ -148,6 +148,8 @@ hr {
       
       <label for="email"><strong>Email</strong></label>
       <input type="text" placeholder="Enter email" name="email" id="email" required><br><br>
+      <label for="Subject"><strong>subject</strong></label>
+      <input type="text" placeholder="Enter Subject" name="subject" id="subject" required><br><br>
       
       
       <label>
