--- a/views/studentdash.html
+++ b/views/studentdash.html
@@ -26,15 +26,14 @@
         <div class="sidebar" align="center">
                 <img src="studenticon.jpg" class="profile_image" alt="" height="200px" width="200px" border="2px">
                 <h4>Venkataraman</h4>
-            <a href="#"><em class="fas fa-desktop"></em><span>Dashboard</span></a>
-            <a href="#"><em class="fab fa-meetup"></em><span>Join Meeting</span></a>
-            <a href="#"><em class="far fa-address-card"></em><span>Attendance</span></a>
-            <a href="#"><em class="fas fa-bell"></em><span>Alerts</span></a>
-            <a href="#"><em class="fas fa-sliders-h"></em><span>Settings</span></a>
-            <a href="#"><em class="fas fa-info-circle"></em><span>About</span></a>
+            <a href="Checksemattendence"><em class="fas fa-desktop"></em><span>Dashboard</span></a>
+            <a href="checkless"><em class="fab fa-meetup"></em><span>Join Meeting</span></a>
+            <a href="view"><em class="far fa-address-card"></em><span>Attendance</span></a>
+
 
         </div>
         <!--sidebar end-->
         <div class="content"></div>
     </body>
+   
 </html>
