--- a/views/studentdash.html
+++ b/views/studentdash.html
@@ -26,9 +26,9 @@
         <div class="sidebar" align="center">
                 <img src="studenticon.jpg" class="profile_image" alt="" height="200px" width="200px" border="2px">
                 <h4>Venkataraman</h4>
-            <a href="Checksemattendence"><em class="fas fa-desktop"></em><span>Dashboard</span></a>
-            <a href="checkless"><em class="fab fa-meetup"></em><span>Join Meeting</span></a>
-            <a href="view"><em class="far fa-address-card"></em><span>Attendance</span></a>
+            <a href="Checksemattendence"><em class="fas fa-desktop"></em><span>check attendence</span></a>
+            <a href="checkless"><em class="fab fa-meetup"></em><span>Attendence 75% </span></a>
+            <a href="view"><em class="far fa-address-card"></em><span>View subjectwise</span></a>
 
 
         </div>
