--- a/views/style1.css
+++ b/views/style1.css
@@ -134,3 +134,423 @@ label #sidebar_btn:hover{
 #check{
     display:none;
 }
+table{
+  text-align:center;
+    border-collapse: collapse;
+    width: 1000px;
+    margin-left:100px;
+    background-color:white;
+}
+th, td {
+    text-align:center;
+    border-collapse: collapse;
+    padding: 5px;
+}
+tr:nth-child(even){background-color: #f2f2f2;}
+
+ tbody {
+  text-align:center;
+    background-color:#ADD8E6;
+
+}
+.box{
+    background-color: #ADD8E6;
+    width: 1000px;
+    color:#E6BBAD;
+    border: 5px solid #E6BBAD;
+    padding: 20px;
+    padding-top: 0px;
+    margin-left:150px;
+    
+   
+  }
+  .box h2{
+    color:#ADD8E6;
+    margin-top:0px;
+    margin-bottom:40px;
+    margin-left:-20px;
+    background-color:#E6BBAD;
+    width: 1041px;
+    text-align-last: center;
+  }
+  label{
+    color: black;
+    font-weight: bold;
+    font-style:italic;
+  }
+body{
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+  }
+  
+  header {
+    position:fixed;
+    background: #22242A;
+    padding: 20px;
+    width: 100%;
+    height: 30px;
+  }
+  
+  .left_area h3{
+    color: #fff;
+    margin:0;
+    text-transform: uppercase;
+    font-size: 22px;
+    font-weight: 900;
+  }
+  
+  .left_area span{
+    color: #1dc4e7;
+  }
+  
+  .logout_btn{
+    padding: 5px;
+    background: #19b3d3;
+    text-decoration: none;
+    float: right;
+    margin-top: -30px;
+    margin-right: 40px;
+    border-radius: 2px;
+    font-size: 15px;
+    font-weight: 600;
+    color: #fff;
+    transition: 0.5s;
+    transition-property: background;
+  }
+  
+  .logout_btn:hover{
+    background: #0d9dbb;
+  }
+  
+  .sidebar{
+    background: #2f323a;
+    margin-top: 70px;
+    padding-top: 30px;
+    position: fixed;
+    left: 0;
+    width: 260px;
+    height: 100%;
+    transition: 0.5s;
+    transition-property: left;
+  }
+  
+  .sidebar .profile_image{
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    margin-bottom: 20px;
+  }
+  
+  .sidebar h4{
+    color: #ccc;
+    margin-top: 0;
+    margin-bottom: 50px;
+  }
+  
+  .sidebar ul{
+    position: relative;
+    list-style: none;
+  
+  }
+  
+  .sidebar ul li a{
+    color: #fff;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    text-decoration: none;
+    box-sizing: border-box;
+    transition: 0.5s;
+    transition-property: background;
+    padding: 0px 0px 0px 1px;
+    height: 60px;
+  }
+  
+  .sidebar ul li a:hover{
+    background: #19b3d3;
+    color: #fff;
+  
+  }
+  
+  .sidebar ul ul{
+    position: absolute;
+    left: 220px;
+    width: 200px;
+    top: 0;
+    display: none;
+    background: #2f323a;
+    box-shadow: 2px 2px 10px #2f323a;
+  }
+  
+  .sidebar ul .dropdown{
+    position: relative;
+  }
+  
+  .sidebar ul .dropdown:hover ul{
+    display: initial;
+  }
+  
+  .sidebar ul .dropdown1{
+    position: relative;
+  }
+  
+  .sidebar ul .dropdown1:hover ul{
+    display: initial;
+  }
+  
+  .sidebar a:hover{
+    background: #19b3d3;
+  
+  }
+  
+  .sidebar em{
+    padding: 10px;
+  }
+  
+  label #sidebar_btn{
+    z-index: 1;
+    color: #fff;
+    position: fixed;
+    cursor: pointer;
+    left: 300px;
+    font-size: 20px;
+    margin: 5.5px 0;
+  }
+  
+  label #sidebar_btn:hover{
+    color: #19b3d3;
+  }
+  
+  #check:checked ~ .sidebar{
+    left: -200px;
+  }
+  #check:checked ~.sidebar a span{
+    display: none;
+  }
+  #check:checked ~.sidebar ul ul{
+    display:none;
+  }
+  
+  #check:checked ~.sidebar a{
+    font-size: 20px;
+    margin-left: 162px;
+    width: 55px;
+  
+  }
+  
+  .content{
+    margin-left: 250px;
+    /*background: url(scenery.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;*/
+    height: 100vh;
+    transition: 0.5s;
+  
+  }
+  
+  #check:checked ~ .content{
+    margin-left: 60px;
+  }
+  
+  #check{
+    display:none;
+  }
+  button{
+    background-color:#42EADDFF;
+    color:black; 
+}
+
+.styled-table{
+    background-color:white;
+    text-align:center;
+    width: 1000px;
+    border-collapse: collpase;
+    margin-left: 175px;
+    font-size:0.9em;
+    font-family: sans-serif;
+    min-width:400px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.15)
+}
+.styled-table thead tr{
+    background-color: #009879;
+    color: #ffffff;
+    text-align:left;
+}
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
+}
+#piechart{
+    margin-left:500px;
+    font-size: 100px;
+  }
+body {background-color: coral;}
+
+.button {
+  text-align: center;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 8px;
+  letter-spacing: 4px;
+  position: relative;
+  background-color: #16a085;
+  border: none;
+  color: #fff;
+  padding: 5px;
+  width: 100px;
+  transition-duration: 0.4s;
+  overflow: hidden;
+  box-shadow: 0 5px 15px #193047;
+  border-radius: 4px;
+  margin-left:900px;
+}
+
+.button:hover {
+  background: #fff;
+  box-shadow: 0px 2px 10px 5px #1abc9c;
+  color: #000;
+}
+
+.button:after {
+  content: "";
+  background: #1abc9c;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s
+}
+
+.button:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
+}
+
+.button:focus { outline:0; }
+body{
+  background-color: #000000;
+  padding: 0px;
+  margin: 0px;
+}
+
+.butt{
+  text-align: center;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 8px;
+  letter-spacing: 4px;
+  position: relative;
+  background-color: #16a085;
+  border: none;
+  color: #fff;
+  padding: 5px;
+  width: 100px;
+  transition-duration: 0.4s;
+  overflow: hidden;
+  box-shadow: 0 5px 15px #193047;
+  border-radius: 4px;
+  margin-left:630px;
+}
+
+.butt:hover {
+  background: #fff;
+  box-shadow: 0px 2px 10px 5px #1abc9c;
+  color: #000;
+}
+
+.butt:after {
+  content: "";
+  background: #1abc9c;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s
+}
+
+.butt:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
+}
+
+.butt:focus { outline:0; }
+body{
+  background-color: #000000;
+  padding: 0px;
+  margin: 0px;
+}
+
+#gradient
+{
+ width: 100%;
+ height: 800px;
+ padding: 0px;
+ margin: 0px;
+}
+html {
+  height:100%;
+}
+
+body {
+  margin:0;
+}
+
+.bg {
+  animation:slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+
+h1 {
+  font-family:monospace;
+}
+
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
+}
